--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "node-fetch":"2.6.6",
     "typescript": "^3.9.2",
-    "axios":"^1.3.4",
-    "qs":"^6.11.1"
+    "axios":"^1.3.4"
   },
   "devDependencies": {
     "@now/node": "^1.6.1",
