--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "node-fetch":"2.6.6",
     "typescript": "^3.9.2",
-    "axios":"^1.3.4"
+    "axios":"^1.3.4",
+    "run-morph-client":"^1.0.0"
   },
   "devDependencies": {
     "@now/node": "^1.6.1",
