--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,28 @@
 # Dependencies
 node_modules/
-yarn-debug.log*
-yarn-error.log*
-.yarn-integrity
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
+.pnp/
+.pnp.js
 
-# Build output
+# Testing
+coverage/
+
+# Production
 dist/
 build/
-*.tsbuildinfo
+.next/
+out/
 
 # Environment variables
 .env
 .env.local
-.env.*.local
-.env.development
-.env.test
-.env.production
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # IDE and editor files
 .idea/
@@ -30,25 +30,17 @@ build/
 *.swp
 *.swo
 .DS_Store
-Thumbs.db
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Debug logs
-npm-debug.log*
-debug.log
-logs/
-*.log
-
-# Testing
-coverage/
-.nyc_output/
+# TypeScript
+*.tsbuildinfo
 
 # Vercel
-.vercel
-.now
+.vercel/
 
 # Misc
-.cache/
-.temp/
-*.bak
-*.tmp
-*~ 
+.DS_Store
+*.pem 
